[FIX] getFirst()메소드 get(0)로 수정