@@ -114,7 +114,7 @@ public record UserFeedGetResponse(
             return null;
         }
 
-        return novel.getNovelGenres().getFirst().getGenre().getGenreName();
+        return novel.getNovelGenres().get(0).getGenre().getGenreName();
     }
 
     private static Float getUserNovelRating(Novel novel, Long visitorId) {
